Bug 998445 - Unable to see disk cache size, 'Calculating web content cache size' stays forever, r=michal